# side

./: LICENSE  README.md
cli/: Cargo.toml
cli/scripts/: side.config.toml
cli/src/: main.rs
cli/src/cmd/: setup.rs
