[package]
name = "cli"
version = "0.1.0"
authors = ["jhondev <jma9974@gmail.com>"]
license = "MIT"
description = "A tool to search files"
keywords = ["cli", "productivity"]
categories = ["command-line-utilities"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
tokyo = "1.0.0"
